--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <!-- PF WebComponents CSS-->
+  <link rel="stylesheet" href="//rawgit.com/patternfly-webcomponents/patternfly-webcomponents/master-dist/dist/css/patternfly-webcomponents.css">
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,6 +24,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Patternfly React Demo App</title>
+
+  <!-- WebComponents v1 Polyfills and CSS-->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-lite.js"></script>
+  <script src="//rawgit.com/webcomponents/custom-elements/master/src/native-shim.js"></script>
 </head>
 
 <body>
